# discord-overlay-v2

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
src/discord_overlay/: app.py  config.py  controller.py  model.py
src/discord_overlay/libs/: QDiscordWebSocket.py  __init__.py  css.py
src/discord_overlay/scripts/: __init__.py
src/discord_overlay/widgets/: settings.py  systemtray.py
src/discord_overlay/widgets/main/: __init__.py
src/discord_overlay/widgets/main/central/: __init__.py  scroll_area.py
src/discord_overlay/widgets/main/footer/: __init__.py  size_grip.py
src/discord_overlay/widgets/main/header/: __init__.py  status.py  title.py  toggle_button.py
src/discord_overlay/widgets/user/: __init__.py  avatar.py  nick_label.py
