[project]
authors = [
    {name = "Bashtian", email = "bastian@bashtian.fr"},
]
name = "discord-overlay"
description = "A Discord Overlay"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: GNU GPL :: GNU GENERAL PUBLIC LICENSE 3.0 (GPL v3.0)",
    "Environment :: X11 Applications :: Qt",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",

    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",

    "Intended Audience :: End Users/Desktop",
    "Topic :: Desktop Environment",
]
dependencies = [
    "Click==8.1.3",
    "PyQT6==6.5.0",
    "requests==2.30.0",
    "pyinstaller==5.11.0",
]
dynamic = ["version"]

[project.scripts]
discord-overlay = "discord_overlay.scripts:main"

[project.optional-dependencies]
tests = [
    "black",
    "flake8",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "wheel>=0.40",
    "pip>=23",
    "setuptools_scm[toml]>=6.2",
]

[tool.setuptools]
include-package-data = true
platforms = [
    "Windows",
    "Linux",
    "OSX"
]

[tool.setuptools.packages.find]
where = ["src"]
